@@ -1,5 +1,7 @@
 *Edge*
 
+* Recognizes 410 as Resource Gone. #2316 [Jordan Brough, Jatinder Singh]
+
 * More thorough SSL support.  #2370 [Roy Nicholson]
 
 * HTTP proxy support.  #2133 [Marshall Huss, Sébastien Dabet]
